kubernetes/ingress/crafty-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crafty
  namespace: crafty
spec:
  ingressClassName: nginx
  rules:
    - host: craft.optiplex.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crafty-server-crafty-4
                port:
                  number: 8443
