kubernetes/ingress/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: videos
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /emby
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
