kubernetes/ingress/jellyseerr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: videos
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
        - path: /jellyseerr
          pathType: Prefix
          backend:
            service:
              name: jellyseerr
              port:
                number: 80
